; ModuleID = '/home/carl/AnghaBench/linux/arch/riscv/net/extr_bpf_jit_comp.c_rv_tail_call_reg.c'
source_filename = "/home/carl/AnghaBench/linux/arch/riscv/net/extr_bpf_jit_comp.c_rv_tail_call_reg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rv_jit_context = type { i32 }

@RV_CTX_F_SEEN_S6 = common dso_local global i32 0, align 4
@RV_REG_S6 = common dso_local global i32 0, align 4
@RV_REG_A6 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rv_jit_context*)* @rv_tail_call_reg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rv_tail_call_reg(%struct.rv_jit_context* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.rv_jit_context*, align 8
  store %struct.rv_jit_context* %0, %struct.rv_jit_context** %3, align 8
  %4 = load %struct.rv_jit_context*, %struct.rv_jit_context** %3, align 8
  %5 = call i32 @mark_tail_call(%struct.rv_jit_context* %4)
  %6 = load %struct.rv_jit_context*, %struct.rv_jit_context** %3, align 8
  %7 = call i64 @seen_call(%struct.rv_jit_context* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %15

9:                                                ; preds = %1
  %10 = load i32, i32* @RV_CTX_F_SEEN_S6, align 4
  %11 = load %struct.rv_jit_context*, %struct.rv_jit_context** %3, align 8
  %12 = getelementptr inbounds %struct.rv_jit_context, %struct.rv_jit_context* %11, i32 0, i32 0
  %13 = call i32 @__set_bit(i32 %10, i32* %12)
  %14 = load i32, i32* @RV_REG_S6, align 4
  store i32 %14, i32* %2, align 4
  br label %17

15:                                               ; preds = %1
  %16 = load i32, i32* @RV_REG_A6, align 4
  store i32 %16, i32* %2, align 4
  br label %17

17:                                               ; preds = %15, %9
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i32 @mark_tail_call(%struct.rv_jit_context*) #1

declare dso_local i64 @seen_call(%struct.rv_jit_context*) #1

declare dso_local i32 @__set_bit(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
